Try to fix UI broke on mobile 8

--- a/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
+++ b/src/app/digits/components/game-arithmetic-operations/game-arithmetic-operations.component.scss
@@ -50,12 +50,12 @@
     order: 0;
     flex: 0 1 auto;
     align-self: auto; 
-    /* font-size: 55px; */
+    font-size: 55px;
     width: 57px;
     height: 57px;
     border: 4px solid #6b6b6b;
     border-radius: 50%;
-    /* margin: 3px 3px 3px 3px; */
+    margin: 3px 3px 3px 3px;
     /* text-align: center; */
     color: blue;
   }
